Bug #22025 Error msg "Transporter to node 3 reported error 0x16" Needs to be cleaned up
Submitted: 5 Sep 2006 18:37 Modified: 8 Feb 2007 5:39
Reporter: Jonathan Miller
Status: Closed
Category:Server: Cluster Severity:S3 (Non-critical)
Version:5.1.12 OS:Linux (Linux 64 bit OS)
Assigned to: Bugs System Target Version:

[5 Sep 2006 18:37] Jonathan Miller
Description:
In talking with Jonas, he stated that this error message means that the TCP buffer is
full. There is no way for a customer to know that from "Transporter to node 3 reported
error 0x16". We need to return a correct error code and message that lest a customer know
what the warning means and any corrective steps that they should take.

How to repeat:
N/A

Suggested fix:
 We need to return a correct error code and message that lest a customer know what the
warning means and any corrective steps that they should take.
[21 Nov 2006 6:30] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/15598

ChangeSet@1.2321, 2006-11-21 13:32:30+00:00, lzhou@dev3-138.dev.cn.tlan +1 -0
  BUG#22025 Return correct error message when transporter error occored
[1 Dec 2006 14:58] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/16309

ChangeSet@1.2321, 2006-12-01 20:57:07+00:00, lzhou@ts3-34.ts.cn.tlan +1 -0
  BUG#22025 Return correct error message when transporter error occored
[1 Feb 2007 3:32] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/19150

ChangeSet@1.2345, 2007-02-01 10:27:07+00:00, lzhou@dev3-63.(none) +1 -0
  BUG#22025 Return correct error message when transporter error occured. Modify content
of message structure of last patch.
[1 Feb 2007 7:43] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/19161

ChangeSet@1.2345, 2007-02-01 14:37:43+00:00, lzhou@dev3-63.(none) +1 -0
  BUG#22025 Return correct error message when transporter error occured. Modify content
of message structure of last patch.
[7 Feb 2007 18:05] Tomas Ulin
pushed to 5.1.16
[8 Feb 2007 5:39] Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of
that product and will be incorporated into the next release.

If necessary, you can access the source repository and build the latest available
version, including the bug fix. More information about accessing the source trees is
available at

    http://dev.mysql.com/doc/en/installing-source.html

Documented in 5.1.16 changelog.
[8 Feb 2007 8:07] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/19536

ChangeSet@1.2405, 2007-02-08 15:02:14+00:00, lzhou@dev3-63.(none) +1 -0
  BUG#22025 Return correct error message when transporter error occur.
[9 Feb 2007 6:37] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/19598

ChangeSet@1.2405, 2007-02-09 13:31:51+00:00, lzhou@dev3-63.(none) +1 -0
  BUG#22025 Return correct error message when transporter error occur.