BUG#22025 Return correct error message when transporter error occured. Modify content of message structure of last patch.

storage/ndb/src/common/debugger/EventLogger.cpp:
  Change content of error message structure